# feeder-model-training

./: .gitignore  README.md  build_feeder_only_dataset.py  config.py  evaluate.py  generate_split.py  pyproject.toml  render_validation_data.py  split_assignment.json  sweep_report_notes.md  test_sweep_logging.py  train_localizer.py  train_polo.py  train_polo_sweep.py
docs/: model-comparison.md
notebooks/: 01_frame_extraction_and_annotation_prep.ipynb  02_train_polo.ipynb  03_evaluation.ipynb  eval_results.csv
