[project]
name = "feeder-model-training"
version = "0.1.0"
description = "End-to-end training + evaluation for POLO/localizer feeder bee detection models"
requires-python = ">=3.10"
dependencies = [
    "mosaic-behavior[polo,localizer] @ git+https://github.com/ecodylicscience/mosaic.git",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Notebook execution + experiment tracking
notebooks = ["jupyter", "ipython", "ipykernel"]
wandb = ["wandb>=0.16"]
dev = ["ipython", "ruff"]

[tool.setuptools]
py-modules = ["config"]
